--- a/JuParejas3/estilo2.css
+++ b/JuParejas3/estilo2.css
@@ -1,10 +1,15 @@
-td {
+td, th {
     width: 200px;
     height: 200px;
     cursor: pointer;
     border:2px solid blue;
 }
-
+/*
+#contenedor_lista > tr{
+    width: 50px;
+    height: 50px;
+}
+*/
 td img {
     height: 100%; 
     width: 100%; 
